Fix: striped styling for tables in dark mode

--- a/app/assets/stylesheets/hera/base.scss
+++ b/app/assets/stylesheets/hera/base.scss
@@ -317,6 +317,10 @@ pre {
   color: var(--text-default);
 }
 
+.table {
+  --bs-table-striped-bg: var(--table-stripe-bg);
+}
+
 .text-break-spaces {
   white-space: break-spaces !important;
 }
